// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Applications index test snapshots loading 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  height: 100%;
  width: 100%;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 8px;
}

.c14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  width: 100%;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c17 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c6 {
  font-family: 'proxima-nova',Helvetica,Arial,sans-serif;
  font-size: 20px;
  font-weight: 400;
  text-transform: none;
  font-style: normal;
  color: #1a1a1a;
}

.c12 svg {
  height: 24px;
  width: 24px;
}

.c12 svg path.path-fill,
.c12 svg line.path-fill,
.c12 svg polygon.path-fill,
.c12 svg rect.path-fill,
.c12 svg circle.path-fill,
.c12 svg polyline.path-fill {
  fill: !important;
  -webkit-transition: fill 200ms cubic-bezier(0.4,0,0.2,1) 0ms;
  transition: fill 200ms cubic-bezier(0.4,0,0.2,1) 0ms;
}

.c12 svg path.stroke-fill,
.c12 svg line.stroke-fill,
.c12 svg polygon.stroke-fill,
.c12 svg rect.stroke-fill,
.c12 svg circle.stroke-fill,
.c12 svg polyline.stroke-fill {
  stroke: !important;
  -webkit-transition: stroke 200ms cubic-bezier(0.4,0,0.2,1) 0ms;
  transition: stroke 200ms cubic-bezier(0.4,0,0.2,1) 0ms;
}

.c12 svg rect.rect-height {
  height: 24px;
  width: 24px;
}

.c12.downward {
  -webkit-transform: rotate(180deg);
  -ms-transform: rotate(180deg);
  transform: rotate(180deg);
}

.c12.upward {
  -webkit-transform: initial;
  -ms-transform: initial;
  transform: initial;
}

.c12 .c5 {
  margin-left: 4px;
}

.c12 img {
  width: 24px;
}

.c11 {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c18 {
  margin-top: 16px;
  margin-bottom: 16px;
}

.c7 {
  max-width: 400px;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.c9 .MuiSwitch-thumb {
  color: #fff;
  background-image: url(data:image/svg+xml,%3C%3Fxml%20version%3D%221.0%22%20encoding%3D%22UTF-8%22%3F%3E%3Csvg%20id%3D%22Capa_29%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20viewBox%3D%220%200%2020%2020%22%3E%3Cdefs%3E%3Cstyle%3E.cls-1%20%7B%0A%20%20fill%3A%20%2300b3ec%3B%0A%7D%0A%0A.cls-2%20%7B%0A%20%20fill%3A%20none%3B%0A%20%20stroke%3A%20%2300b3ec%3B%0A%20%20stroke-linecap%3A%20round%3B%0A%20%20stroke-miterlimit%3A%2010%3B%0A%7D%0A%0A%3C%2Fstyle%3E%3C%2Fdefs%3E%3Cpath%20class%3D%22cls-1%22%20d%3D%22m10%2C5.97c-1.06%2C0-2.08.42-2.83%2C1.17-.75.75-1.17%2C1.77-1.17%2C2.83s.42%2C2.08%2C1.17%2C2.83c.75.75%2C1.77%2C1.17%2C2.83%2C1.17s2.08-.42%2C2.83-1.17c.75-.75%2C1.17-1.77%2C1.17-2.83%2C0-2.21-1.79-4-4-4Z%22%3E%3C%2Fpath%3E%3Cline%20class%3D%22cls-2%22%20x1%3D%2210%22%20y1%3D%223.5%22%20x2%3D%2210%22%20y2%3D%224.5%22%3E%3C%2Fline%3E%3Cline%20class%3D%22cls-2%22%20x1%3D%225.41%22%20y1%3D%225.4%22%20x2%3D%226.11%22%20y2%3D%226.1%22%3E%3C%2Fline%3E%3Cline%20class%3D%22cls-2%22%20x1%3D%223.5%22%20y1%3D%229.99%22%20x2%3D%224.5%22%20y2%3D%229.99%22%3E%3C%2Fline%3E%3Cline%20class%3D%22cls-2%22%20x1%3D%225.4%22%20y1%3D%2214.58%22%20x2%3D%226.1%22%20y2%3D%2213.87%22%3E%3C%2Fline%3E%3Cline%20class%3D%22cls-2%22%20x1%3D%229.99%22%20y1%3D%2216.49%22%20x2%3D%229.99%22%20y2%3D%2215.49%22%3E%3C%2Fline%3E%3Cline%20class%3D%22cls-2%22%20x1%3D%2214.58%22%20y1%3D%2214.59%22%20x2%3D%2213.87%22%20y2%3D%2213.88%22%3E%3C%2Fline%3E%3Cline%20class%3D%22cls-2%22%20x1%3D%2216.49%22%20y1%3D%2210%22%20x2%3D%2215.49%22%20y2%3D%2210%22%3E%3C%2Fline%3E%3Cline%20class%3D%22cls-2%22%20x1%3D%2214.59%22%20y1%3D%225.41%22%20x2%3D%2213.88%22%20y2%3D%226.11%22%3E%3C%2Fline%3E%3C%2Fsvg%3E%0A);
}

.c9 .MuiSwitch-track {
  background-color: #00b3ec;
}

.c10.MuiIconButton-root {
  padding: 8px;
  background-color: #F6F7F9;
  color: #737373;
}

.c10.MuiIconButton-root:hover {
  background-color: #ffffff;
  color: #009CCC;
}

.c13 {
  height: 100%;
  width: calc(100% - 48px);
  padding: 0 24px;
  max-height: calc(100vh - 60px);
  overflow-wrap: normal;
  overflow-x: hidden;
  margin: 0px auto;
}

.c1 {
  width: 100%;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  overflow: hidden;
}

.c15 {
  background-color: #ffffff;
  border-radius: 10px;
  box-sizing: border-box;
  margin: 0 auto;
  min-height: 100%;
}

.c3 {
  height: 60px;
  min-width: 650px;
  z-index: 2;
  width: calc(100% - 64px);
  padding: 0 32px;
}

.c16 .MuiAlert-root {
  width: 100%;
}

<div>
  <div
    class="c0 c1"
  >
    <div
      class="c2 c3"
    >
      <div
        class="c4"
      >
        <div
          class="c4"
        >
          <span
            class="c5 c6 c7 ellipsis"
            color="neutral40"
            data-testid="text-Applications"
            title="Applications"
          >
            Applications
          </span>
        </div>
      </div>
      <div
        class="c8 "
      >
        <span
          class="MuiSwitch-root c9 $7335ba1b890ac032$var$DarkModeSwitch"
        >
          <span
            aria-disabled="false"
            class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-8 MuiSwitch-switchBase MuiSwitch-colorPrimary"
          >
            <span
              class="MuiIconButton-label"
            >
              <input
                class="PrivateSwitchBase-input-11 MuiSwitch-input"
                type="checkbox"
                value=""
              />
              <span
                class="MuiSwitch-thumb"
              />
            </span>
          </span>
          <span
            class="MuiSwitch-track"
          />
        </span>
        <a
          aria-disabled="false"
          class="MuiButtonBase-root MuiIconButton-root c10 c11 $8405a4f7caf64b1d$var$Link"
          href="https://docs.gitops.weave.works/"
          rel="noreferrer"
          tabindex="0"
          target="_blank"
          title="Docs"
        >
          <span
            class="MuiIconButton-label"
          >
            <div
              class="c4 c12"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M20 19.59V8l-6-6H6c-1.1 0-1.99.9-1.99 2L4 20c0 1.1.89 2 1.99 2H18c.45 0 .85-.15 1.19-.4l-4.43-4.43c-.8.52-1.74.83-2.76.83-2.76 0-5-2.24-5-5s2.24-5 5-5 5 2.24 5 5c0 1.02-.31 1.96-.83 2.75L20 19.59zM9 13c0 1.66 1.34 3 3 3s3-1.34 3-3-1.34-3-3-3-3 1.34-3 3z"
                />
              </svg>
            </div>
          </span>
        </a>
        <button
          aria-haspopup="true"
          class="MuiButtonBase-root MuiIconButton-root c10"
          tabindex="0"
          title="Account settings"
          type="button"
        >
          <span
            class="MuiIconButton-label"
          >
            <div
              class="c4 c12"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z"
                />
              </svg>
            </div>
          </span>
        </button>
      </div>
    </div>
    <div
      class="c13"
    >
      <div
        class="c14 c15 c16"
      >
        <div
          class="c17 c18 "
        >
          <div
            class="MuiCircularProgress-root MuiCircularProgress-colorPrimary MuiCircularProgress-indeterminate"
            role="progressbar"
            style="width: 40px; height: 40px;"
          >
            <svg
              class="MuiCircularProgress-svg"
              viewBox="22 22 44 44"
            >
              <circle
                class="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate"
                cx="44"
                cy="44"
                fill="none"
                r="20.2"
                stroke-width="3.6"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Applications index test snapshots success 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  height: 100%;
  width: 100%;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 8px;
}

.c14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  width: 100%;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c17 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  height: 100%;
  width: 100%;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c19 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  gap: 24px;
}

.c20 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  gap: 12px;
}

.c26 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.c28 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 12px;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c30 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
}

.c35 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c40 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  height: 100%;
  width: 100%;
}

.c41 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c45 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c50 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c6 {
  font-family: 'proxima-nova',Helvetica,Arial,sans-serif;
  font-size: 20px;
  font-weight: 400;
  text-transform: none;
  font-style: normal;
  color: #1a1a1a;
}

.c47 {
  font-family: 'proxima-nova',Helvetica,Arial,sans-serif;
  font-size: 14px;
  font-weight: 400;
  text-transform: none;
  font-style: normal;
  color: #737373;
}

.c52 {
  font-family: 'proxima-nova',Helvetica,Arial,sans-serif;
  font-size: 20px;
  font-weight: 400;
  text-transform: none;
  font-style: normal;
  color: #737373;
}

.c53 {
  font-family: 'proxima-nova',Helvetica,Arial,sans-serif;
  font-size: 12px;
  font-weight: 600;
  text-transform: capitalize;
  font-style: normal;
  color: #737373;
}

.c12 svg {
  height: 24px;
  width: 24px;
}

.c12 svg path.path-fill,
.c12 svg line.path-fill,
.c12 svg polygon.path-fill,
.c12 svg rect.path-fill,
.c12 svg circle.path-fill,
.c12 svg polyline.path-fill {
  fill: !important;
  -webkit-transition: fill 200ms cubic-bezier(0.4,0,0.2,1) 0ms;
  transition: fill 200ms cubic-bezier(0.4,0,0.2,1) 0ms;
}

.c12 svg path.stroke-fill,
.c12 svg line.stroke-fill,
.c12 svg polygon.stroke-fill,
.c12 svg rect.stroke-fill,
.c12 svg circle.stroke-fill,
.c12 svg polyline.stroke-fill {
  stroke: !important;
  -webkit-transition: stroke 200ms cubic-bezier(0.4,0,0.2,1) 0ms;
  transition: stroke 200ms cubic-bezier(0.4,0,0.2,1) 0ms;
}

.c12 svg rect.rect-height {
  height: 24px;
  width: 24px;
}

.c12.downward {
  -webkit-transform: rotate(180deg);
  -ms-transform: rotate(180deg);
  transform: rotate(180deg);
}

.c12.upward {
  -webkit-transform: initial;
  -ms-transform: initial;
  transform: initial;
}

.c12 .c5 {
  margin-left: 4px;
}

.c12 img {
  width: 24px;
}

.c22 svg {
  height: 16px;
  width: 16px;
}

.c22 svg path.path-fill,
.c22 svg line.path-fill,
.c22 svg polygon.path-fill,
.c22 svg rect.path-fill,
.c22 svg circle.path-fill,
.c22 svg polyline.path-fill {
  fill: !important;
  -webkit-transition: fill 200ms cubic-bezier(0.4,0,0.2,1) 0ms;
  transition: fill 200ms cubic-bezier(0.4,0,0.2,1) 0ms;
}

.c22 svg path.stroke-fill,
.c22 svg line.stroke-fill,
.c22 svg polygon.stroke-fill,
.c22 svg rect.stroke-fill,
.c22 svg circle.stroke-fill,
.c22 svg polyline.stroke-fill {
  stroke: !important;
  -webkit-transition: stroke 200ms cubic-bezier(0.4,0,0.2,1) 0ms;
  transition: stroke 200ms cubic-bezier(0.4,0,0.2,1) 0ms;
}

.c22 svg rect.rect-height {
  height: 16px;
  width: 16px;
}

.c22.downward {
  -webkit-transform: rotate(180deg);
  -ms-transform: rotate(180deg);
  transform: rotate(180deg);
}

.c22.upward {
  -webkit-transform: initial;
  -ms-transform: initial;
  transform: initial;
}

.c22 .c5 {
  margin-left: 4px;
}

.c22 img {
  width: 16px;
}

.c38 svg {
  fill: #737373;
  height: 24px;
  width: 24px;
}

.c38 svg path.path-fill,
.c38 svg line.path-fill,
.c38 svg polygon.path-fill,
.c38 svg rect.path-fill,
.c38 svg circle.path-fill,
.c38 svg polyline.path-fill {
  fill: #737373 !important;
  -webkit-transition: fill 200ms cubic-bezier(0.4,0,0.2,1) 0ms;
  transition: fill 200ms cubic-bezier(0.4,0,0.2,1) 0ms;
}

.c38 svg path.stroke-fill,
.c38 svg line.stroke-fill,
.c38 svg polygon.stroke-fill,
.c38 svg rect.stroke-fill,
.c38 svg circle.stroke-fill,
.c38 svg polyline.stroke-fill {
  stroke: #737373 !important;
  -webkit-transition: stroke 200ms cubic-bezier(0.4,0,0.2,1) 0ms;
  transition: stroke 200ms cubic-bezier(0.4,0,0.2,1) 0ms;
}

.c38 svg rect.rect-height {
  height: 24px;
  width: 24px;
}

.c38.downward {
  -webkit-transform: rotate(180deg);
  -ms-transform: rotate(180deg);
  transform: rotate(180deg);
}

.c38.upward {
  -webkit-transform: initial;
  -ms-transform: initial;
  transform: initial;
}

.c38 .c5 {
  margin-left: 4px;
  color: #737373;
}

.c38 img {
  width: 24px;
}

.c46 svg {
  fill: #d8d8d8;
  height: 16px;
  width: 16px;
}

.c46 svg path.path-fill,
.c46 svg line.path-fill,
.c46 svg polygon.path-fill,
.c46 svg rect.path-fill,
.c46 svg circle.path-fill,
.c46 svg polyline.path-fill {
  fill: #d8d8d8 !important;
  -webkit-transition: fill 200ms cubic-bezier(0.4,0,0.2,1) 0ms;
  transition: fill 200ms cubic-bezier(0.4,0,0.2,1) 0ms;
}

.c46 svg path.stroke-fill,
.c46 svg line.stroke-fill,
.c46 svg polygon.stroke-fill,
.c46 svg rect.stroke-fill,
.c46 svg circle.stroke-fill,
.c46 svg polyline.stroke-fill {
  stroke: #d8d8d8 !important;
  -webkit-transition: stroke 200ms cubic-bezier(0.4,0,0.2,1) 0ms;
  transition: stroke 200ms cubic-bezier(0.4,0,0.2,1) 0ms;
}

.c46 svg rect.rect-height {
  height: 16px;
  width: 16px;
}

.c46.downward {
  -webkit-transform: rotate(180deg);
  -ms-transform: rotate(180deg);
  transform: rotate(180deg);
}

.c46.upward {
  -webkit-transform: initial;
  -ms-transform: initial;
  transform: initial;
}

.c46 .c5 {
  margin-left: 4px;
  color: #d8d8d8;
}

.c46 img {
  width: 16px;
}

.c43 {
  padding: 4px;
}

.c11 {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c21.MuiButton-root {
  height: 32px;
  font-size: 12px;
  -webkit-letter-spacing: 1px;
  -moz-letter-spacing: 1px;
  -ms-letter-spacing: 1px;
  letter-spacing: 1px;
  line-height: 1;
  border-radius: 2px;
  font-weight: 600;
}

.c21.MuiButton-outlined {
  padding: 8px 12px;
}

.c32.MuiButton-root {
  border-radius: 50%;
  min-width: 38px;
  height: 38px;
  padding: 0;
}

.c32.MuiButton-text {
  padding: 0;
}

.c33.MuiButton-outlined {
  border-radius: 0 2px 2px 0;
}

.c33.MuiButton-outlinedPrimary {
  border-color: #d8d8d8;
}

.c33.MuiButton-root {
  min-width: 0;
  height: 32px;
  padding: 8px 4px;
}

.c33.MuiButton-text {
  padding: 0;
}

.c31.MuiButton-outlined {
  margin-right: 0;
  border-radius: 2px 0 0 2px;
  border-right: none;
}

.c31.MuiButton-outlined.MuiButton-outlined.Mui-disabled {
  border-right: none;
}

.c34 {
  position: absolute;
  overflow: hidden;
  background: #ffffff;
  height: 0px;
  -webkit-transition-property: height;
  transition-property: height;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
  -webkit-transition-timing-function: ease-in-out;
  transition-timing-function: ease-in-out;
  z-index: 1;
}

.c29 {
  margin-right: 8px;
}

.c48 {
  position: relative;
  height: 100%;
  width: 0px;
  left: 24px;
  -webkit-transition-property: width,left;
  transition-property: width,left;
  -webkit-transition-duration: 0.5s;
  transition-duration: 0.5s;
  -webkit-transition-timing-function: ease-in-out;
  transition-timing-function: ease-in-out;
}

.c48.open {
  left: 0px;
  width: 350px;
}

.c49 {
  background: rbga(255,255,255,0.75);
  height: 100%;
  width: 100%;
  border-left: 2px solid #d8d8d8;
  padding: 24px;
  padding-left: 32px;
}

.c51 .MuiListItem-gutters {
  padding-left: 0px;
}

.c51 .MuiCheckbox-root {
  padding: 0px;
}

.c51 .MuiCheckbox-colorSecondary.Mui-checked {
  color: #00b3ec;
}

.c36 {
  height: 40px;
  padding: 4px 0px;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  overflow-x: auto;
}

.c36 .MuiChip-root {
  color: #1a1a1a;
  margin-right: 4px;
  background-color: #F6F7F9;
  -webkit-transition: none;
  transition: none;
}

.c39 {
  width: 0px;
  -webkit-transition: width 0.3s ease-in-out;
  transition: width 0.3s ease-in-out;
  margin-left: 4px;
}

.c39.expanded {
  width: 200px;
}

.c42.MuiButton-root {
  margin: 0;
  text-transform: none;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
}

.c42.MuiButton-text {
  min-width: 0px;
}

.c42.MuiButton-text .selected {
  color: #1a1a1a;
}

.c42.arrow {
  min-width: 0px;
}

.c44 td {
  text-align: center;
}

.c27 {
  max-width: 100%;
}

.c37 {
  position: relative;
  padding: 0 12px;
}

.c24 {
  width: 100%;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  overflow-x: hidden;
}

.c24 h2 {
  padding: 8px;
  font-size: 12px;
  font-weight: 600;
  color: #737373;
  margin: 0px;
  white-space: nowrap;
  text-transform: uppercase;
  -webkit-letter-spacing: 1px;
  -moz-letter-spacing: 1px;
  -ms-letter-spacing: 1px;
  letter-spacing: 1px;
}

.c24 .MuiTableRow-root {
  -webkit-transition: background 0.5s ease-in-out;
  transition: background 0.5s ease-in-out;
}

.c24 .MuiTableRow-root:not(.MuiTableRow-head):hover {
  background: #f5f5f5;
  -webkit-transition: background 0.5s ease-in-out;
  transition: background 0.5s ease-in-out;
}

.c24 .MuiTableCell-root {
  border-color: #d8d8d8;
}

.c24 table {
  margin-top: 12px;
}

.c24 th {
  padding: 0;
  background: #F6F7F9;
}

.c24 th .MuiCheckbox-root {
  padding: 4px 9px;
}

.c24 th:first-child {
  border-top-left-radius: 4px;
}

.c24 th:last-child {
  border-top-right-radius: 4px;
}

.c24 td {
  padding-left: 16px;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.c25 td:nth-child(7) {
  white-space: pre-wrap;
  overflow-wrap: break-word;
  word-wrap: break-word;
}

.c7 {
  max-width: 400px;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.c9 .MuiSwitch-thumb {
  color: #fff;
  background-image: url(data:image/svg+xml,%3C%3Fxml%20version%3D%221.0%22%20encoding%3D%22UTF-8%22%3F%3E%3Csvg%20id%3D%22Capa_29%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20viewBox%3D%220%200%2020%2020%22%3E%3Cdefs%3E%3Cstyle%3E.cls-1%20%7B%0A%20%20fill%3A%20%2300b3ec%3B%0A%7D%0A%0A.cls-2%20%7B%0A%20%20fill%3A%20none%3B%0A%20%20stroke%3A%20%2300b3ec%3B%0A%20%20stroke-linecap%3A%20round%3B%0A%20%20stroke-miterlimit%3A%2010%3B%0A%7D%0A%0A%3C%2Fstyle%3E%3C%2Fdefs%3E%3Cpath%20class%3D%22cls-1%22%20d%3D%22m10%2C5.97c-1.06%2C0-2.08.42-2.83%2C1.17-.75.75-1.17%2C1.77-1.17%2C2.83s.42%2C2.08%2C1.17%2C2.83c.75.75%2C1.77%2C1.17%2C2.83%2C1.17s2.08-.42%2C2.83-1.17c.75-.75%2C1.17-1.77%2C1.17-2.83%2C0-2.21-1.79-4-4-4Z%22%3E%3C%2Fpath%3E%3Cline%20class%3D%22cls-2%22%20x1%3D%2210%22%20y1%3D%223.5%22%20x2%3D%2210%22%20y2%3D%224.5%22%3E%3C%2Fline%3E%3Cline%20class%3D%22cls-2%22%20x1%3D%225.41%22%20y1%3D%225.4%22%20x2%3D%226.11%22%20y2%3D%226.1%22%3E%3C%2Fline%3E%3Cline%20class%3D%22cls-2%22%20x1%3D%223.5%22%20y1%3D%229.99%22%20x2%3D%224.5%22%20y2%3D%229.99%22%3E%3C%2Fline%3E%3Cline%20class%3D%22cls-2%22%20x1%3D%225.4%22%20y1%3D%2214.58%22%20x2%3D%226.1%22%20y2%3D%2213.87%22%3E%3C%2Fline%3E%3Cline%20class%3D%22cls-2%22%20x1%3D%229.99%22%20y1%3D%2216.49%22%20x2%3D%229.99%22%20y2%3D%2215.49%22%3E%3C%2Fline%3E%3Cline%20class%3D%22cls-2%22%20x1%3D%2214.58%22%20y1%3D%2214.59%22%20x2%3D%2213.87%22%20y2%3D%2213.88%22%3E%3C%2Fline%3E%3Cline%20class%3D%22cls-2%22%20x1%3D%2216.49%22%20y1%3D%2210%22%20x2%3D%2215.49%22%20y2%3D%2210%22%3E%3C%2Fline%3E%3Cline%20class%3D%22cls-2%22%20x1%3D%2214.59%22%20y1%3D%225.41%22%20x2%3D%2213.88%22%20y2%3D%226.11%22%3E%3C%2Fline%3E%3C%2Fsvg%3E%0A);
}

.c9 .MuiSwitch-track {
  background-color: #00b3ec;
}

.c10.MuiIconButton-root {
  padding: 8px;
  background-color: #F6F7F9;
  color: #737373;
}

.c10.MuiIconButton-root:hover {
  background-color: #ffffff;
  color: #009CCC;
}

.c13 {
  height: 100%;
  width: calc(100% - 48px);
  padding: 0 24px;
  max-height: calc(100vh - 60px);
  overflow-wrap: normal;
  overflow-x: hidden;
  margin: 0px auto;
}

.c1 {
  width: 100%;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  overflow: hidden;
}

.c15 {
  background-color: #ffffff;
  border-radius: 10px;
  box-sizing: border-box;
  margin: 0 auto;
  min-height: 100%;
}

.c18 {
  width: calc(100% - 48px);
  padding: 24px;
  height: 100%;
  overflow-x: hidden;
}

.c3 {
  height: 60px;
  min-width: 650px;
  z-index: 2;
  width: calc(100% - 64px);
  padding: 0 32px;
}

.c16 .MuiAlert-root {
  width: 100%;
}

.c23 tbody tr td:nth-child(6) {
  white-space: nowrap;
}

<div>
  <div
    class="c0 c1"
  >
    <div
      class="c2 c3"
    >
      <div
        class="c4"
      >
        <div
          class="c4"
        >
          <span
            class="c5 c6 c7 ellipsis"
            color="neutral40"
            data-testid="text-Applications"
            title="Applications"
          >
            Applications
          </span>
        </div>
      </div>
      <div
        class="c8 "
      >
        <span
          class="MuiSwitch-root c9 $7335ba1b890ac032$var$DarkModeSwitch"
        >
          <span
            aria-disabled="false"
            class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-15 MuiSwitch-switchBase MuiSwitch-colorPrimary"
          >
            <span
              class="MuiIconButton-label"
            >
              <input
                class="PrivateSwitchBase-input-18 MuiSwitch-input"
                type="checkbox"
                value=""
              />
              <span
                class="MuiSwitch-thumb"
              />
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </span>
          <span
            class="MuiSwitch-track"
          />
        </span>
        <a
          aria-disabled="false"
          class="MuiButtonBase-root MuiIconButton-root c10 c11 $8405a4f7caf64b1d$var$Link"
          href="https://docs.gitops.weave.works/"
          rel="noreferrer"
          tabindex="0"
          target="_blank"
          title="Docs"
        >
          <span
            class="MuiIconButton-label"
          >
            <div
              class="c4 c12"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M20 19.59V8l-6-6H6c-1.1 0-1.99.9-1.99 2L4 20c0 1.1.89 2 1.99 2H18c.45 0 .85-.15 1.19-.4l-4.43-4.43c-.8.52-1.74.83-2.76.83-2.76 0-5-2.24-5-5s2.24-5 5-5 5 2.24 5 5c0 1.02-.31 1.96-.83 2.75L20 19.59zM9 13c0 1.66 1.34 3 3 3s3-1.34 3-3-1.34-3-3-3-3 1.34-3 3z"
                />
              </svg>
            </div>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </a>
        <button
          aria-haspopup="true"
          class="MuiButtonBase-root MuiIconButton-root c10"
          tabindex="0"
          title="Account settings"
          type="button"
        >
          <span
            class="MuiIconButton-label"
          >
            <div
              class="c4 c12"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z"
                />
              </svg>
            </div>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </div>
    </div>
    <div
      class="c13"
    >
      <div
        class="c14 c15 c16"
      >
        <div
          class="c17 c18"
        >
          <div
            style="width: 100%;"
          >
            <div
              class="MuiBox-root MuiBox-root-19"
              style="width: 100%;"
            />
            <div
              class="c19"
            >
              <div
                class="c20"
              >
                <button
                  class="MuiButtonBase-root MuiButton-root MuiButton-outlined c21 actionButton btn MuiButton-outlinedPrimary MuiButton-disableElevation"
                  id="add-application"
                  tabindex="0"
                  type="button"
                >
                  <span
                    class="MuiButton-label"
                  >
                    <span
                      class="MuiButton-startIcon MuiButton-iconSizeMedium"
                    >
                      <div
                        class="c4 c22"
                      >
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root"
                          focusable="false"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
                          />
                        </svg>
                      </div>
                    </span>
                    ADD AN APPLICATION
                  </span>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </button>
                <div>
                  Git Repos not found
                </div>
              </div>
              <div
                class="c23"
              >
                <div
                  class="c0 c24 c25 $de7736a788c0c71d$var$AutomationsTable"
                >
                  <div
                    class=""
                  />
                  <div
                    class="c26 c27"
                  >
                    <div
                      class="c28 c29 $52441885c75ba9c5$var$CheckboxActions"
                    >
                      <div
                        class="$4d7d782bef2eb187$var$SyncButton"
                        style="position: relative; display: inline-block;"
                      >
                        <div
                          class="c30"
                        >
                          <button
                            class="MuiButtonBase-root MuiButton-root MuiButton-outlined c21 c31 MuiButton-outlinedPrimary MuiButton-disableElevation Mui-disabled Mui-disabled"
                            disabled=""
                            tabindex="-1"
                            type="button"
                          >
                            <span
                              class="MuiButton-label"
                            >
                              Sync
                            </span>
                          </button>
                          <button
                            class="MuiButtonBase-root MuiButton-root MuiButton-outlined c32 c33 MuiButton-outlinedPrimary MuiButton-disableElevation Mui-disabled Mui-disabled"
                            disabled=""
                            tabindex="-1"
                            type="button"
                          >
                            <span
                              class="MuiButton-label"
                            >
                              <div
                                class="c4 c22"
                              >
                                <svg
                                  aria-hidden="true"
                                  class="MuiSvgIcon-root"
                                  focusable="false"
                                  viewBox="0 0 24 24"
                                >
                                  <path
                                    d="M7 10l5 5 5-5z"
                                  />
                                </svg>
                              </div>
                            </span>
                          </button>
                        </div>
                        <div
                          class="c30 c34"
                        >
                          <button
                            class="MuiButtonBase-root MuiButton-root MuiButton-outlined c21 MuiButton-outlinedPrimary MuiButton-disableElevation"
                            style="white-space: nowrap;"
                            tabindex="0"
                            type="button"
                          >
                            <span
                              class="MuiButton-label"
                            >
                              Sync Without Source
                            </span>
                            <span
                              class="MuiTouchRipple-root"
                            />
                          </button>
                        </div>
                      </div>
                      <div
                        class=""
                        title="Suspend Selected"
                      >
                        <button
                          class="MuiButtonBase-root MuiButton-root MuiButton-outlined c21 MuiButton-outlinedPrimary MuiButton-disableElevation Mui-disabled Mui-disabled"
                          disabled=""
                          tabindex="-1"
                          type="button"
                        >
                          <span
                            class="MuiButton-label"
                          >
                            <div
                              class="c4 c12"
                            >
                              <svg
                                aria-hidden="true"
                                class="MuiSvgIcon-root"
                                focusable="false"
                                viewBox="0 0 24 24"
                              >
                                <path
                                  d="M6 19h4V5H6v14zm8-14v14h4V5h-4z"
                                />
                              </svg>
                            </div>
                          </span>
                        </button>
                      </div>
                      <div
                        class=""
                        title="Resume Selected"
                      >
                        <button
                          class="MuiButtonBase-root MuiButton-root MuiButton-outlined c21 MuiButton-outlinedPrimary MuiButton-disableElevation Mui-disabled Mui-disabled"
                          disabled=""
                          tabindex="-1"
                          type="button"
                        >
                          <span
                            class="MuiButton-label"
                          >
                            <div
                              class="c4 c12"
                            >
                              <svg
                                aria-hidden="true"
                                class="MuiSvgIcon-root"
                                focusable="false"
                                viewBox="0 0 24 24"
                              >
                                <path
                                  d="M8 5v14l11-7z"
                                />
                              </svg>
                            </div>
                          </span>
                        </button>
                      </div>
                    </div>
                    <div
                      class="c35 c36 $9121bed0097d59fd$var$ChipGroup"
                    />
                    <div
                      class="c4 c37"
                    >
                      <div
                        class="c4 $621c541edae1f860$var$SearchField"
                      >
                        <button
                          class="MuiButtonBase-root MuiButton-root MuiButton-text c32 $621c541edae1f860$var$SearchField MuiButton-colorInherit MuiButton-disableElevation"
                          tabindex="0"
                          type="button"
                        >
                          <span
                            class="MuiButton-label"
                          >
                            <div
                              class="c4 c38"
                            >
                              <svg
                                id="explorer"
                                viewBox="0 0 24 24"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  class="path-fill"
                                  d="m9.59,5c1.23,0,2.38.48,3.24,1.34.87.87,1.34,2.02,1.34,3.24s-.48,2.38-1.34,3.24-2.02,1.34-3.24,1.34-2.38-.48-3.24-1.34-1.34-2.02-1.34-3.24.48-2.38,1.34-3.24c.87-.87,2.02-1.34,3.24-1.34m0-1c-1.43,0-2.86.55-3.95,1.64-2.18,2.18-2.18,5.72,0,7.9,1.09,1.09,2.52,1.64,3.95,1.64s2.86-.55,3.95-1.64c2.18-2.18,2.18-5.72,0-7.9-1.09-1.09-2.52-1.64-3.95-1.64h0Z"
                                />
                                <path
                                  class="path-fill"
                                  d="m7.44,7.91c-.13,0-.25-.04-.34-.14-.2-.2-.21-.49-.02-.69l.04-.04c.2-.2.51-.2.71,0s.2.51,0,.71c-.1.1-.24.16-.38.16Zm3.81-.38c-.09,0-.18-.02-.26-.07l.21-.46.27-.42-.27.42.3-.4c.24.14.31.45.17.69-.09.16-.26.24-.43.24Zm-1.96-.48c-.25,0-.49-.18-.52-.44-.03-.27.14-.52.41-.55h.05c.27-.05.52.16.55.43.03.27-.16.52-.44.55-.02,0-.04,0-.06,0Z"
                                />
                                <path
                                  class="path-fill"
                                  d="m11.25,7.53c-.25,0-.49-.18-.52-.44-.03-.27.14-.52.41-.55h.05c.27-.05.52.16.55.43.03.27-.16.52-.44.55-.02,0-.04,0-.06,0Z"
                                />
                                <line
                                  class="stroke-fill"
                                  x1="13.24"
                                  x2="14.71"
                                  y1="13.24"
                                  y2="14.71"
                                />
                                <rect
                                  class="stroke-fill"
                                  height="6.09"
                                  rx="1"
                                  ry="1"
                                  transform="translate(-7.09 17.13) rotate(-45)"
                                  width="2.03"
                                  x="16.11"
                                  y="14.08"
                                />
                              </svg>
                            </div>
                          </span>
                          <span
                            class="MuiTouchRipple-root"
                          />
                        </button>
                        <div
                          class="c39 "
                        >
                          <form>
                            <div
                              class="MuiFormControl-root MuiTextField-root $66a683f19021b9f2$var$Input"
                            >
                              <div
                                class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-formControl MuiInput-formControl"
                              >
                                <input
                                  aria-invalid="false"
                                  class="MuiInputBase-input MuiInput-input"
                                  id="table-search"
                                  placeholder="Search"
                                  type="text"
                                  value=""
                                />
                              </div>
                            </div>
                          </form>
                        </div>
                      </div>
                      <button
                        class="MuiButtonBase-root MuiButton-root MuiButton-text c32 MuiButton-colorInherit MuiButton-disableElevation"
                        tabindex="0"
                        type="button"
                      >
                        <span
                          class="MuiButton-label"
                        >
                          <div
                            class="c4 c38"
                          >
                            <svg
                              aria-hidden="true"
                              class="MuiSvgIcon-root"
                              focusable="false"
                              viewBox="0 0 24 24"
                            >
                              <path
                                d="M10 18h4v-2h-4v2zM3 6v2h18V6H3zm3 7h12v-2H6v2z"
                              />
                            </svg>
                          </div>
                        </span>
                        <span
                          class="MuiTouchRipple-root"
                        />
                      </button>
                    </div>
                  </div>
                  <div
                    class="c40"
                  >
                    <div
                      class="MuiTableContainer-root"
                    >
                      <table
                        aria-label="simple table"
                        class="MuiTable-root"
                      >
                        <thead
                          class="MuiTableHead-root"
                        >
                          <tr
                            class="MuiTableRow-root MuiTableRow-head"
                          >
                            <th
                              class="MuiTableCell-root MuiTableCell-head"
                              scope="col"
                            >
                              <span
                                aria-disabled="false"
                                class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-15 MuiCheckbox-root MuiCheckbox-colorPrimary PrivateSwitchBase-checked-16 Mui-checked MuiIconButton-colorPrimary"
                              >
                                <span
                                  class="MuiIconButton-label"
                                >
                                  <input
                                    checked=""
                                    class="PrivateSwitchBase-input-18"
                                    data-indeterminate="false"
                                    type="checkbox"
                                    value=""
                                  />
                                  <svg
                                    aria-hidden="true"
                                    class="MuiSvgIcon-root"
                                    focusable="false"
                                    viewBox="0 0 24 24"
                                  >
                                    <path
                                      d="M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
                                    />
                                  </svg>
                                </span>
                                <span
                                  class="MuiTouchRipple-root"
                                />
                              </span>
                            </th>
                            <th
                              class="MuiTableCell-root MuiTableCell-head"
                              scope="col"
                            >
                              <div
                                class="c41"
                              >
                                <button
                                  class="MuiButtonBase-root MuiButton-root MuiButton-text c42 MuiButton-colorInherit"
                                  tabindex="0"
                                  type="button"
                                >
                                  <span
                                    class="MuiButton-label"
                                  >
                                    <h2
                                      class=""
                                    >
                                      Name
                                    </h2>
                                  </span>
                                  <span
                                    class="MuiTouchRipple-root"
                                  />
                                </button>
                                <div
                                  class="c43"
                                />
                                <div
                                  style="width: 16px;"
                                />
                              </div>
                            </th>
                            <th
                              class="MuiTableCell-root MuiTableCell-head"
                              scope="col"
                            >
                              <div
                                class="c41"
                              >
                                <button
                                  class="MuiButtonBase-root MuiButton-root MuiButton-text c42 MuiButton-colorInherit"
                                  tabindex="0"
                                  type="button"
                                >
                                  <span
                                    class="MuiButton-label"
                                  >
                                    <h2
                                      class=""
                                    >
                                      Kind
                                    </h2>
                                  </span>
                                  <span
                                    class="MuiTouchRipple-root"
                                  />
                                </button>
                                <div
                                  class="c43"
                                />
                                <div
                                  style="width: 16px;"
                                />
                              </div>
                            </th>
                            <th
                              class="MuiTableCell-root MuiTableCell-head"
                              scope="col"
                            >
                              <div
                                class="c41"
                              >
                                <button
                                  class="MuiButtonBase-root MuiButton-root MuiButton-text c42 MuiButton-colorInherit"
                                  tabindex="0"
                                  type="button"
                                >
                                  <span
                                    class="MuiButton-label"
                                  >
                                    <h2
                                      class=""
                                    >
                                      Namespace
                                    </h2>
                                  </span>
                                  <span
                                    class="MuiTouchRipple-root"
                                  />
                                </button>
                                <div
                                  class="c43"
                                />
                                <div
                                  style="width: 16px;"
                                />
                              </div>
                            </th>
                            <th
                              class="MuiTableCell-root MuiTableCell-head"
                              scope="col"
                            >
                              <div
                                class="c41"
                              >
                                <button
                                  class="MuiButtonBase-root MuiButton-root MuiButton-text c42 MuiButton-colorInherit"
                                  tabindex="0"
                                  type="button"
                                >
                                  <span
                                    class="MuiButton-label"
                                  >
                                    <h2
                                      class=""
                                    >
                                      Tenant
                                    </h2>
                                  </span>
                                  <span
                                    class="MuiTouchRipple-root"
                                  />
                                </button>
                                <div
                                  class="c43"
                                />
                                <div
                                  style="width: 16px;"
                                />
                              </div>
                            </th>
                            <th
                              class="MuiTableCell-root MuiTableCell-head"
                              scope="col"
                            >
                              <div
                                class="c41"
                              >
                                <button
                                  class="MuiButtonBase-root MuiButton-root MuiButton-text c42 MuiButton-colorInherit"
                                  tabindex="0"
                                  type="button"
                                >
                                  <span
                                    class="MuiButton-label"
                                  >
                                    <h2
                                      class=""
                                    >
                                      Cluster
                                    </h2>
                                  </span>
                                  <span
                                    class="MuiTouchRipple-root"
                                  />
                                </button>
                                <div
                                  class="c43"
                                />
                                <div
                                  style="width: 16px;"
                                />
                              </div>
                            </th>
                            <th
                              class="MuiTableCell-root MuiTableCell-head"
                              scope="col"
                            >
                              <div
                                class="c41"
                              >
                                <button
                                  class="MuiButtonBase-root MuiButton-root MuiButton-text c42 MuiButton-colorInherit"
                                  tabindex="0"
                                  type="button"
                                >
                                  <span
                                    class="MuiButton-label"
                                  >
                                    <h2
                                      class=""
                                    >
                                      Source
                                    </h2>
                                  </span>
                                  <span
                                    class="MuiTouchRipple-root"
                                  />
                                </button>
                                <div
                                  class="c43"
                                />
                                <div
                                  style="width: 16px;"
                                />
                              </div>
                            </th>
                            <th
                              class="MuiTableCell-root MuiTableCell-head"
                              scope="col"
                            >
                              <div
                                class="c41"
                              >
                                <button
                                  class="MuiButtonBase-root MuiButton-root MuiButton-text c42 MuiButton-colorInherit"
                                  tabindex="0"
                                  type="button"
                                >
                                  <span
                                    class="MuiButton-label"
                                  >
                                    <h2
                                      class=""
                                    >
                                      Verified
                                    </h2>
                                  </span>
                                  <span
                                    class="MuiTouchRipple-root"
                                  />
                                </button>
                                <div
                                  class="c43"
                                />
                                <div
                                  style="width: 16px;"
                                />
                              </div>
                            </th>
                            <th
                              class="MuiTableCell-root MuiTableCell-head"
                              scope="col"
                            >
                              <div
                                class="c41"
                              >
                                <button
                                  class="MuiButtonBase-root MuiButton-root MuiButton-text c42 MuiButton-colorInherit"
                                  tabindex="0"
                                  type="button"
                                >
                                  <span
                                    class="MuiButton-label"
                                  >
                                    <h2
                                      class="selected"
                                    >
                                      Status
                                    </h2>
                                  </span>
                                  <span
                                    class="MuiTouchRipple-root"
                                  />
                                </button>
                                <div
                                  class="c43"
                                />
                                <div
                                  class="c4 c22 downward"
                                >
                                  <svg
                                    aria-hidden="true"
                                    class="MuiSvgIcon-root"
                                    focusable="false"
                                    viewBox="0 0 24 24"
                                  >
                                    <path
                                      d="M4 12l1.41 1.41L11 7.83V20h2V7.83l5.58 5.59L20 12l-8-8-8 8z"
                                    />
                                  </svg>
                                </div>
                              </div>
                            </th>
                            <th
                              class="MuiTableCell-root MuiTableCell-head"
                              scope="col"
                            >
                              <div
                                class="c41"
                              >
                                <button
                                  class="MuiButtonBase-root MuiButton-root MuiButton-text c42 MuiButton-colorInherit"
                                  tabindex="0"
                                  type="button"
                                >
                                  <span
                                    class="MuiButton-label"
                                  >
                                    <h2
                                      class=""
                                    >
                                      Message
                                    </h2>
                                  </span>
                                  <span
                                    class="MuiTouchRipple-root"
                                  />
                                </button>
                                <div
                                  class="c43"
                                />
                                <div
                                  style="width: 16px;"
                                />
                              </div>
                            </th>
                            <th
                              class="MuiTableCell-root MuiTableCell-head"
                              scope="col"
                            >
                              <div
                                class="c41"
                              >
                                <button
                                  class="MuiButtonBase-root MuiButton-root MuiButton-text c42 MuiButton-colorInherit"
                                  tabindex="0"
                                  type="button"
                                >
                                  <span
                                    class="MuiButton-label"
                                  >
                                    <h2
                                      class=""
                                    >
                                      Revision
                                    </h2>
                                  </span>
                                  <span
                                    class="MuiTouchRipple-root"
                                  />
                                </button>
                                <div
                                  class="c43"
                                />
                                <div
                                  style="width: 16px;"
                                />
                              </div>
                            </th>
                            <th
                              class="MuiTableCell-root MuiTableCell-head"
                              scope="col"
                            >
                              <div
                                class="c41"
                              >
                                <button
                                  class="MuiButtonBase-root MuiButton-root MuiButton-text c42 MuiButton-colorInherit"
                                  tabindex="0"
                                  type="button"
                                >
                                  <span
                                    class="MuiButton-label"
                                  >
                                    <h2
                                      class=""
                                    >
                                      Last Updated
                                    </h2>
                                  </span>
                                  <span
                                    class="MuiTouchRipple-root"
                                  />
                                </button>
                                <div
                                  class="c43"
                                />
                                <div
                                  style="width: 16px;"
                                />
                              </div>
                            </th>
                          </tr>
                        </thead>
                        <tbody
                          class="MuiTableBody-root"
                        >
                          <tr
                            class="MuiTableRow-root c44"
                            colspan="12"
                          >
                            <td
                              class="MuiTableCell-root MuiTableCell-body"
                              colspan="12"
                            >
                              <div
                                class="c45"
                              >
                                <div
                                  class="c4 c46"
                                >
                                  <svg
                                    aria-hidden="true"
                                    class="MuiSvgIcon-root"
                                    focusable="false"
                                    viewBox="0 0 24 24"
                                  >
                                    <path
                                      d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm5 11H7v-2h10v2z"
                                    />
                                  </svg>
                                </div>
                                <div
                                  class="c43"
                                />
                                <span
                                  class="c5 c47"
                                  color="neutral30"
                                >
                                  No data
                                </span>
                              </div>
                            </td>
                          </tr>
                        </tbody>
                      </table>
                    </div>
                    <div
                      class="c48"
                      data-testid="container"
                    >
                      <div
                        class="c49"
                      >
                        <div
                          class="c50 c51"
                        >
                          <div
                            class="c35"
                          >
                            <span
                              class="c5 c52"
                              color="neutral30"
                            >
                              Filters
                            </span>
                          </div>
                          <form
                            class="$311205a5eac77e9e$var$ControlledForm"
                          >
                            <ul
                              class="MuiList-root MuiList-padding"
                            >
                              <li
                                class="MuiListItem-root MuiListItem-gutters"
                              >
                                <ul
                                  class="MuiList-root MuiList-padding"
                                >
                                  <li
                                    class="MuiListItem-root MuiListItem-gutters"
                                  >
                                    <div
                                      class="MuiListItemIcon-root"
                                    >
                                      <span
                                        aria-disabled="true"
                                        class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-15 MuiCheckbox-root MuiCheckbox-colorSecondary PrivateSwitchBase-disabled-17 Mui-disabled MuiIconButton-colorSecondary Mui-disabled Mui-disabled"
                                        tabindex="-1"
                                      >
                                        <span
                                          class="MuiIconButton-label"
                                        >
                                          <input
                                            class="PrivateSwitchBase-input-18"
                                            data-indeterminate="false"
                                            disabled=""
                                            id="clusterName"
                                            type="checkbox"
                                            value=""
                                          />
                                          <svg
                                            aria-hidden="true"
                                            class="MuiSvgIcon-root"
                                            focusable="false"
                                            viewBox="0 0 24 24"
                                          >
                                            <path
                                              d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                                            />
                                          </svg>
                                        </span>
                                      </span>
                                    </div>
                                    <span
                                      class="c5 c53"
                                      color="neutral30"
                                    >
                                      cluster
                                    </span>
                                  </li>
                                </ul>
                              </li>
                              <li
                                class="MuiListItem-root MuiListItem-gutters"
                              >
                                <ul
                                  class="MuiList-root MuiList-padding"
                                >
                                  <li
                                    class="MuiListItem-root MuiListItem-gutters"
                                  >
                                    <div
                                      class="MuiListItemIcon-root"
                                    >
                                      <span
                                        aria-disabled="true"
                                        class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-15 MuiCheckbox-root MuiCheckbox-colorSecondary PrivateSwitchBase-disabled-17 Mui-disabled MuiIconButton-colorSecondary Mui-disabled Mui-disabled"
                                        tabindex="-1"
                                      >
                                        <span
                                          class="MuiIconButton-label"
                                        >
                                          <input
                                            class="PrivateSwitchBase-input-18"
                                            data-indeterminate="false"
                                            disabled=""
                                            id="namespace"
                                            type="checkbox"
                                            value=""
                                          />
                                          <svg
                                            aria-hidden="true"
                                            class="MuiSvgIcon-root"
                                            focusable="false"
                                            viewBox="0 0 24 24"
                                          >
                                            <path
                                              d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                                            />
                                          </svg>
                                        </span>
                                      </span>
                                    </div>
                                    <span
                                      class="c5 c53"
                                      color="neutral30"
                                    >
                                      namespace
                                    </span>
                                  </li>
                                </ul>
                              </li>
                              <li
                                class="MuiListItem-root MuiListItem-gutters"
                              >
                                <ul
                                  class="MuiList-root MuiList-padding"
                                >
                                  <li
                                    class="MuiListItem-root MuiListItem-gutters"
                                  >
                                    <div
                                      class="MuiListItemIcon-root"
                                    >
                                      <span
                                        aria-disabled="true"
                                        class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-15 MuiCheckbox-root MuiCheckbox-colorSecondary PrivateSwitchBase-disabled-17 Mui-disabled MuiIconButton-colorSecondary Mui-disabled Mui-disabled"
                                        tabindex="-1"
                                      >
                                        <span
                                          class="MuiIconButton-label"
                                        >
                                          <input
                                            class="PrivateSwitchBase-input-18"
                                            data-indeterminate="false"
                                            disabled=""
                                            id="status"
                                            type="checkbox"
                                            value=""
                                          />
                                          <svg
                                            aria-hidden="true"
                                            class="MuiSvgIcon-root"
                                            focusable="false"
                                            viewBox="0 0 24 24"
                                          >
                                            <path
                                              d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                                            />
                                          </svg>
                                        </span>
                                      </span>
                                    </div>
                                    <span
                                      class="c5 c53"
                                      color="neutral30"
                                    >
                                      status
                                    </span>
                                  </li>
                                </ul>
                              </li>
                              <li
                                class="MuiListItem-root MuiListItem-gutters"
                              >
                                <ul
                                  class="MuiList-root MuiList-padding"
                                >
                                  <li
                                    class="MuiListItem-root MuiListItem-gutters"
                                  >
                                    <div
                                      class="MuiListItemIcon-root"
                                    >
                                      <span
                                        aria-disabled="true"
                                        class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-15 MuiCheckbox-root MuiCheckbox-colorSecondary PrivateSwitchBase-disabled-17 Mui-disabled MuiIconButton-colorSecondary Mui-disabled Mui-disabled"
                                        tabindex="-1"
                                      >
                                        <span
                                          class="MuiIconButton-label"
                                        >
                                          <input
                                            class="PrivateSwitchBase-input-18"
                                            data-indeterminate="false"
                                            disabled=""
                                            id="tenant"
                                            type="checkbox"
                                            value=""
                                          />
                                          <svg
                                            aria-hidden="true"
                                            class="MuiSvgIcon-root"
                                            focusable="false"
                                            viewBox="0 0 24 24"
                                          >
                                            <path
                                              d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                                            />
                                          </svg>
                                        </span>
                                      </span>
                                    </div>
                                    <span
                                      class="c5 c53"
                                      color="neutral30"
                                    >
                                      tenant
                                    </span>
                                  </li>
                                </ul>
                              </li>
                              <li
                                class="MuiListItem-root MuiListItem-gutters"
                              >
                                <ul
                                  class="MuiList-root MuiList-padding"
                                >
                                  <li
                                    class="MuiListItem-root MuiListItem-gutters"
                                  >
                                    <div
                                      class="MuiListItemIcon-root"
                                    >
                                      <span
                                        aria-disabled="true"
                                        class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-15 MuiCheckbox-root MuiCheckbox-colorSecondary PrivateSwitchBase-disabled-17 Mui-disabled MuiIconButton-colorSecondary Mui-disabled Mui-disabled"
                                        tabindex="-1"
                                      >
                                        <span
                                          class="MuiIconButton-label"
                                        >
                                          <input
                                            class="PrivateSwitchBase-input-18"
                                            data-indeterminate="false"
                                            disabled=""
                                            id="type"
                                            type="checkbox"
                                            value=""
                                          />
                                          <svg
                                            aria-hidden="true"
                                            class="MuiSvgIcon-root"
                                            focusable="false"
                                            viewBox="0 0 24 24"
                                          >
                                            <path
                                              d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                                            />
                                          </svg>
                                        </span>
                                      </span>
                                    </div>
                                    <span
                                      class="c5 c53"
                                      color="neutral30"
                                    >
                                      type
                                    </span>
                                  </li>
                                </ul>
                              </li>
                            </ul>
                          </form>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
